--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
   <div id="suggestions"></div>
 
   <div class="categories">
+     <a class="category" href="https://www.amazon.com/s?k=fashion&tag=bestshopp0cd1-20">Education</a>
     <a class="category" href="https://www.amazon.com/s?k=fashion&tag=bestshopp0cd1-20">Fashion</a>
     <a class="category" href="https://www.amazon.com/s?k=health&tag=bestshopp0cd1-20">Health</a>
     <a class="category" href="https://www.amazon.com/s?k=technology&tag=bestshopp0cd1-20">Technology</a>
@@ -562,6 +563,27 @@
       "Home Improvement Tools", "Skin Care Products", "Travel Accessories", "Exercise Machines", 
       "Pet Accessories", "Home Theater System", "Bicycle Accessories", "Men Accessories", 
       "Winter Jackets", "Skateboards", "Clothing Storage", "Laptop Accessories", "Lighting Fixtures"
+     "Women's Fashion", "Men's Fashion", "Girls' Fashion", "Boys' Fashion", "Baby",
+    "Luggage", "Jewelry", "Watches", "Handbags & Wallets", "Accessories"
+    "Test Preparation", "Higher & Continuing Education", "Education Theory", "Curriculum & Instruction",
+    "Education Administration", "Special Education", "Homeschooling", "Adult & Continuing Education",
+    "Distance & Online Learning", "Education Research"
+    "Vitamins & Dietary Supplements", "Health Care", "Sports Nutrition", "Medical Supplies & Equipment",
+    "Wellness & Relaxation", "Sexual Wellness", "Household Supplies", "Baby & Child Care",
+    "Personal Care", "Oral Care"
+    "Makeup", "Skin Care", "Hair Care", "Fragrance", "Foot, Hand & Nail Care", "Tools & Accessories",
+    "Shave & Hair Removal", "Personal Care", "Oral Care", "Luxury Beauty", "Professional Beauty", "Indie Beauty"
+    "Computers & Accessories", "Smart Home", "Wearable Technology", "Networking Products", "Computer Components",
+    "Data Storage", "Printers", "Monitors", "Computer Accessories", "Software"
+    "TV & Video", "Home Audio", "Camera & Photo", "Wearable Technology", "Car Electronics & GPS",
+    "Portable Audio & Video", "Cell Phones & Accessories", "Office Electronics", "Musical Instruments", "Amazon Devices"
+    "Literature & Fiction", "Mystery, Thriller & Suspense", "Science Fiction & Fantasy", "Romance",
+    "Biographies & Memoirs", "Self-Help", "Cookbooks, Food & Wine", "Children's Books", "Teen & Young Adult",
+    "History", "Science & Math", "Business & Money"
+    "Women's Shoes", "Men's Shoes", "Girls' Shoes", "Boys' Shoes", "Baby Shoes",
+    "Athletic", "Boots", "Sandals", "Slippers", "Sneakers"
+    "Women's Clothing", "Men's Clothing", "Girls' Clothing", "Boys' Clothing", "Baby Clothing",
+    "Uniforms, Work & Safety", "Costumes & Accessories", "Luggage & Travel Gear", "Jewelry", "Watches"
     ];
 
     function showSuggestions(value) {
