--- a/index.html
+++ b/index.html
@@ -89,35 +89,40 @@
       right: 20px;
       background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg');
   
-    #searchBox {
-      margin: 40px auto;
-      padding: 20px;
-      font-size: 1rem;
-      width: 350px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    #suggestions {
-      border: 1px solid #ccc;
-      max-height: 150px;
-      overflow-y: auto;
-      display: none;
-      position: absolute;
-      background: #fff;
-      z-index: 999;
-      width: 350px;
-      margin: 0 auto;
-      left: 0;
-      right: 0;
-      text-align: left;
-    }
-    #suggestions div {
-      padding: 10px;
-      cursor: pointer;
-    }
-    #suggestions div:hover {
-      background-color: #f0f0f0;
-    }
+#searchBox {
+  margin: 40px auto;
+  padding: 25px;  
+  font-size: 1rem; 
+  width: 500px; 
+  border: 2px solid #aaa;
+  border-radius: 8px;   
+}
+
+#suggestions {
+  border: 2px solid #aaa;
+  max-height: 250px;
+  overflow-y: auto;
+  display: none;
+  position: absolute;
+  background: #fff;
+  z-index: 999;
+  width: 500px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  text-align: left;
+  font-size: 1rem;
+}
+
+#suggestions div {
+  padding: 15px;  
+  cursor: pointer;
+}
+
+#suggestions div:hover {
+  background-color: #f0f0f0;
+}
+
     footer {
       background-color: #0073e6;
       color: white;
