--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://trackui.recomaze.ai/v2/dist/load.min.js?client_id=RECOMAZE-2ytQsGHmHVRM0l9c8y4gkD4Zs4u2w9FKTwGrufdNGfL9guQ2tdBnf3E3jdahMf" ></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Shop a wide range of products at Best Shopping Store, powered by Amazon. Discover fashion, electronics, home goods, and more at unbeatable prices." />
