--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
     #searchBox {
       margin: 40px auto;
-      padding: 15px;  
-      font-size: 1rem; 
-      width: 500px; 
+      padding: 15px;
+      font-size: 1rem;
+      width: 500px;
       border: 2px solid #aaa;
-      border-radius: 8px;   
+      border-radius: 8px;
     }
 
     #suggestions {
@@ -91,7 +91,7 @@
     }
 
     #suggestions div {
-      padding: 15px;  
+      padding: 15px;
       cursor: pointer;
     }
 
@@ -102,8 +102,18 @@
     footer {
       background-color: #0073e6;
       color: white;
-      padding: 20px;
-      margin-top: 20px;
+      padding: 25px;
+      margin-top: 40px;
+    }
+
+    footer a {
+      color: #fff;
+      text-decoration: underline;
+      margin: 0 8px;
+    }
+
+    footer a:hover {
+      color: #dbeeff;
     }
 
     /* Responsive Design */
@@ -129,6 +139,7 @@
       color: white;
       transition: background 0.3s ease;
     }
+
     .free-trial { background: #28a745; }
     .free-trial:hover { background: #218838; }
     .paid { background: #ff9800; }
@@ -150,6 +161,22 @@
 
     <input type="text" id="searchBox" placeholder="Search products..." autocomplete="off">
     <div id="suggestions"></div>
+  </main>
+
+  <footer>
+    <p>© 2025 Best Shopping Store. All Rights Reserved.</p>
+    <p>
+      <a href="https://bestshoppingstore.github.io/terms-of-service.html" target="_blank">Terms of Service</a> |
+      <a href="https://bestshoppingstore.github.io/media-kit.html" target="_blank">Media Kit</a>
+    </p>
+    <p>
+      Contact us:
+      <a href="mailto:bestshopping184@gmail.com">bestshopping184@gmail.com</a> |
+      <a href="https://www.facebook.com/profile.php?id=61578072021892" target="_blank">Facebook Page</a>
+    </p>
+  </footer>
+</body>
+</html>
 
     <!-- Audible Affiliate Section -->
     <section class="audible">
