--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <p>
       Contact us:
       <a href="mailto:bestshopping184@gmail.com">bestshopping184@gmail.com</a> |
-      <a href="https://www.facebook.com/profile.php?id=61578072021892" target="_blank">Facebook Page</a>
+      <a href="https://www.facebook.com/share/17RNHkWA8k/" target="_blank">Facebook Page</a>
     </p>
   </footer>
 </body>
