--- a/media-kit.html
+++ b/media-kit.html
@@ -27,7 +27,7 @@
     <h2>Contact Information</h2>
     <p>Email: <a href="mailto:bestshopping184@gmail.com">bestshopping184@gmail.com</a></p>
     <p>Website: <a href="https://bestshoppingstore.github.io/">bestshoppingstore.github.io</a></p>
-    <p>Facebook: <a href="https://www.facebook.com/profile.php?id=61578072021892" target="_blank">Alham Afghan</a></p>
+    <p>Facebook: <a href="https://www.facebook.com/share/17RNHkWA8k/" target="_blank">Alham Afghan</a></p>
   </div>
 
   <div class="section">
